log
Thu 14 Sep 2023 01:18:05 AM UTC: 
 tests:  1|8
total_score: 0/70
859d461
Thu 14 Sep 2023 01:22:28 AM UTC: 
 treemap.c | 57 ++++++++++++++++++++-------------------------------------
 1 file changed, 20 insertions(+), 37 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:53: error: expected ‘)’ before ‘;’ token
   40 |   TreeMap * map = (TreeMap *) malloc(sizeof(TreeMap);
      |                                     ~               ^
      |                                                     )
treemap.c:45:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   45 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:40:13: error: unused variable ‘map’ [-Werror=unused-variable]
   40 |   TreeMap * map = (TreeMap *) malloc(sizeof(TreeMap);
      |             ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0b736ea
Thu 14 Sep 2023 01:23:23 AM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:53: error: expected ‘)’ before ‘;’ token
   40 |   TreeMap * map = (TreeMap *) malloc(sizeof(TreeMap);
      |                                     ~               ^
      |                                                     )
treemap.c:51:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   51 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:40:13: error: unused variable ‘map’ [-Werror=unused-variable]
   40 |   TreeMap * map = (TreeMap *) malloc(sizeof(TreeMap);
      |             ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
15b3d03
Thu 14 Sep 2023 01:26:45 AM UTC: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:53: error: expected ‘)’ before ‘;’ token
   41 |   TreeMap * map = (TreeMap *) malloc(sizeof(TreeMap);
      |                                     ~               ^
      |                                                     )
treemap.c:52:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   52 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:41:13: error: unused variable ‘map’ [-Werror=unused-variable]
   41 |   TreeMap * map = (TreeMap *) malloc(sizeof(TreeMap);
      |             ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
442e118
Thu 14 Sep 2023 01:27:23 AM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:13: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int (*)(void *, void *)’ [-Werror=incompatible-pointer-types]
   46 |   map->root = lower_than;
      |             ^
treemap.c:47:16: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int (*)(void *, void *)’ [-Werror=incompatible-pointer-types]
   47 |   map->current = lower_than;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
c0c5606
Thu 14 Sep 2023 01:29:28 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
d8d31b4
Thu 14 Sep 2023 01:41:53 AM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:14: error: comparison between pointer and integer [-Werror]
   79 |     if (comp == NULL) {
      |              ^~
treemap.c:81:21: error: ‘TreeNode’ has no member named ‘key’
   81 |       return current->key;
      |                     ^~
treemap.c:84:1: error: control reaches end of non-void function [-Werror=return-type]
   84 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3e6e0f3
Thu 14 Sep 2023 01:42:33 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:14: error: comparison between pointer and integer [-Werror]
   79 |     if (comp == NULL) {
      |              ^~
treemap.c:81:21: error: ‘TreeNode’ has no member named ‘key’
   81 |       return current->key;
      |                     ^~
cc1: all warnings being treated as errors
Compilation failed
9c58cc7
Thu 14 Sep 2023 01:42:54 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:14: error: comparison between pointer and integer [-Werror]
   79 |     if (comp == NULL) {
      |              ^~
cc1: all warnings being treated as errors
Compilation failed
aa4db20
Thu 14 Sep 2023 01:58:28 AM UTC: 
 treemap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  6|7
total_score: 5/70
a4a08a2
